Quiz Exercises: Fix text overflow for quiz questions (#4721)

--- a/src/main/webapp/app/exercises/quiz/shared/questions/multiple-choice-question/multiple-choice-question.component.scss
+++ b/src/main/webapp/app/exercises/quiz/shared/questions/multiple-choice-question/multiple-choice-question.component.scss
@@ -6,6 +6,7 @@
     padding: 20px;
     position: relative;
     width: 100%;
+    overflow: auto;
 
     .answer-options {
         margin-top: 20px;
