--- a/src/main/webapp/app/exercises/quiz/shared/questions/short-answer-question/short-answer-question.component.scss
+++ b/src/main/webapp/app/exercises/quiz/shared/questions/short-answer-question/short-answer-question.component.scss
@@ -6,6 +6,7 @@
     padding: 20px;
     position: relative;
     width: 100%;
+    overflow: auto;
 
     .short-answer-question-display {
         display: flex;
